<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/keyline_space_grid_9">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player_name">

        <EditText
                android:id="@+id/player_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/score">

        <EditText
                android:id="@+id/player_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_matches">

        <EditText
                android:id="@+id/number_of_matches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>